progress on landing page

--- a/index.html
+++ b/index.html
@@ -5,21 +5,115 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HIIT Online Workout</title>
-  <style>
-    body {
-      display: grid;
-      place-items: center;
-      width: 100vw;
-      height: 100vh;
-    }
-  </style>
+  <link rel="stylesheet" href="tailwind.css">
 </head>
-<body>
-  <h1>HIIT Workout Online</h1>
-  <div>
-    <h2>Try it yourself<br>Add the bot to your Discord server to get started</h2>
-    <a href="#">Try It Yourself</a>
-    <a href="#">Learn More</a>
+<body class="overflow-x-hidden">
+  <div class="flex flex-col justify-center items-center w-screen h-screen bg-purple-600">
+    <h1 class="text-7xl font-extrabold tracking-tight text-gray-100">HIIT Workout Online</h1>
+    <h2 class="text-3xl text-gray-200">Run group workouts with a single command.</h2>
+    <div class="space-x-3 my-8">
+      <a href="#" class="rounded-md shadow px-5 py-3 font-medium text-gray-100 bg-green-500 hover:bg-green-600">Try it Yourself</a>
+      <a href="#learn" class="rounded-md shadow px-5 py-3 font-medium text-purple-600 bg-gray-100 hover:bg-gray-200">Learn More</a>
+    </div>
+  </div>
+  <div id="#learn" class="grid grid-cols-2 w-screen h-screen text-gray-900">
+    <div class="bg-gray-100 ml-14 mr-14 my-10 shadow-2xl p-5 space-y-3">
+      <h1 class="text-2xl font-bold">Install:</h1>
+      <p class="text-lg font-semibold">Click 'Try it Yourself' above to add the bot to a server</p>
+      <h2 class="text-2xl font-bold">Start a HIIT Workout:</h2>
+      <p class="text-lg font-semibold">Enter the following command into your discord chat:</p>
+      <code class="bg-gray-300 p-0.5 text-gray-900 text-sm font-medium">!hiit #rounds #high #low [#warmup] [#cooldown]</code>
+      <p class="text-lg font-semibold">Using the following arguments</p>
+      <div class="rounded-lg shadow-md inline-block min-w-full">
+        <table class="w-full table-auto leading-normal">
+          <thead>
+            <tr>
+              <th class="text-left text-gray-100 p-1 rounded-tl-lg bg-purple-600">Argument</th>
+              <th class="text-left text-gray-100 p-1 bg-purple-600">Meaning</th>
+              <th class="text-left text-gray-100 p-1 rounded-tr-lg bg-purple-600">Example</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>#rounds</td>
+              <td>Number of Rounds</td>
+              <td>5</td>
+            </tr>
+            <tr>
+              <td>#high</td>
+              <td>Seconds of High-Intensity</td>
+              <td>45</td>
+            </tr>
+            <tr>
+              <td>#low</td>
+              <td>Seconds of Low-Intensity</td>
+              <td>15</td>
+            </tr>
+            <tr>
+              <td>#warmup (optional)</td>
+              <td>Seconds of Warmup</td>
+              <td>180</td>
+            </tr>
+            <tr>
+              <td>#cooldown (optional)</td>
+              <td>Seconds of Cooldown</td>
+              <td>180</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <h2 class="text-2xl font-bold">Start a Custom HIIT Workout:</h2>
+      <p class="text-lg font-semibold">Enter the following command into your discord chat:</p>
+      <code class="bg-gray-300 p-0.5 text-gray-900  text-sm font-medium">!myhiit #rounds #high #low #warmup #cooldown exercises...</code>
+      <p class="text-lg font-semibold">Using the following arguments</p>
+      <div class="rounded-lg shadow-md inline-block min-w-full">
+        <table class="w-full table-auto leading-normal">
+          <thead>
+            <tr>
+              <th class="text-left text-gray-100 p-1 rounded-tl-lg bg-purple-600">Argument</th>
+              <th class="text-left text-gray-100 p-1 bg-purple-600">Meaning</th>
+              <th class="text-left text-gray-100 p-1 rounded-tr-lg bg-purple-600">Example</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>#rounds</td>
+              <td>Number of Rounds</td>
+              <td>5</td>
+            </tr>
+            <tr>
+              <td>#high</td>
+              <td>Seconds of High-Intensity</td>
+              <td>45</td>
+            </tr>
+            <tr>
+              <td>#low</td>
+              <td>Seconds of Low-Intensity</td>
+              <td>15</td>
+            </tr>
+            <tr>
+              <td>#warmup</td>
+              <td>Seconds of Warmup</td>
+              <td>180</td>
+            </tr>
+            <tr>
+              <td>#cooldown</td>
+              <td>Seconds of Cooldown</td>
+              <td>180</td>
+            </tr>
+            <tr>
+              <td>exercises...</td>
+              <td>Exercises in the Workout</td>
+              <td>pushups plank</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <div class="bg-gray-100 mr-14 my-10 shadow-2xl p-5 h-3/5">
+      <h1 class="text-2xl font-bold">Demo:</h1>
+      <p class="text-lg font-semibold">Coming Soon...</p>
+    </div>
   </div>
 </body>
 </html>
