--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="#learn" class="rounded-md shadow px-5 py-3 font-medium text-purple-600 bg-gray-100 hover:bg-gray-200">Learn More</a>
     </div>
   </div>
-  <div id="#learn" class="grid grid-cols-2 w-screen h-screen text-gray-900">
+  <div id="learn" class="grid grid-cols-2 w-screen h-screen text-gray-900">
     <div class="bg-gray-100 ml-14 mr-14 my-10 shadow-2xl p-5 space-y-3">
       <h1 class="text-2xl font-bold">Install:</h1>
       <p class="text-lg font-semibold">Click 'Try it Yourself' above to add the bot to a server</p>
