--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
       </div>
     </div>
     <div class="bg-gray-100 md:ml-7 sm:ml-14 sm:mr-14 mx-7 my-10 shadow-2xl p-5 h-3/5 rounded-xl">
-      <h1 class="text-2xl font-bold">Demo:</h1>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/vShpRqOo_Wc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h1 class="text-2xl font-bold mb-3">Demo:</h1>
+      <iframe class="w-full h-4/5" src="https://www.youtube.com/embed/2hjHqdSCGZw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   </div>
 </body>
